--- a/finalproject-front/package.json
+++ b/finalproject-front/package.json
@@ -12,16 +12,26 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^9.0.7",
+    "@angular/cdk": "^9.2.4",
     "@angular/common": "~9.0.7",
     "@angular/compiler": "~9.0.7",
     "@angular/core": "~9.0.7",
     "@angular/forms": "~9.0.7",
+    "@angular/material": "^9.2.4",
     "@angular/platform-browser": "~9.0.7",
     "@angular/platform-browser-dynamic": "~9.0.7",
     "@angular/router": "~9.0.7",
     "@angularclass/hmr": "^3.0.0",
+    "@popperjs/core": "^2.4.4",
+    "angular-md5": "^0.1.10",
+    "bootstrap": "^4.5.2",
     "cors": "^2.8.5",
+    "crypto-js": "^4.0.0",
     "hammerjs": "^2.0.8",
+    "jquery": "^3.5.1",
+    "md5": "^2.3.0",
+    "md5-typescript": "^1.0.5",
+    "php-js": "0.0.5",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
