--- a/finalproject-front/package.json
+++ b/finalproject-front/package.json
@@ -23,14 +23,17 @@
     "@angular/router": "~9.0.7",
     "@angularclass/hmr": "^3.0.0",
     "@popperjs/core": "^2.4.4",
+    "@types/js-cookie": "^2.2.6",
     "angular-md5": "^0.1.10",
     "bootstrap": "^4.5.2",
     "cors": "^2.8.5",
     "crypto-js": "^4.0.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.5.1",
+    "js-cookie": "^2.2.1",
     "md5": "^2.3.0",
     "md5-typescript": "^1.0.5",
+    "ngx-cookie-service": "^10.1.1",
     "php-js": "0.0.5",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
