--- a/finalproject-front/package.json
+++ b/finalproject-front/package.json
@@ -22,12 +22,17 @@
     "@angular/platform-browser-dynamic": "~9.0.7",
     "@angular/router": "~9.0.7",
     "@angularclass/hmr": "^3.0.0",
+    "@fortawesome/angular-fontawesome": "^0.7.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@popperjs/core": "^2.4.4",
     "@types/js-cookie": "^2.2.6",
+    "angular-font-awesome": "^3.1.2",
     "angular-md5": "^0.1.10",
     "bootstrap": "^4.5.2",
     "cors": "^2.8.5",
     "crypto-js": "^4.0.0",
+    "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.5.1",
     "js-cookie": "^2.2.1",
