--- a/finalproject-front/package.json
+++ b/finalproject-front/package.json
@@ -16,6 +16,7 @@
     "@angular/common": "~9.0.7",
     "@angular/compiler": "~9.0.7",
     "@angular/core": "~9.0.7",
+    "@angular/fire": "^6.0.3",
     "@angular/forms": "~9.0.7",
     "@angular/material": "^9.2.4",
     "@angular/platform-browser": "~9.0.7",
@@ -32,6 +33,7 @@
     "bootstrap": "^4.5.2",
     "cors": "^2.8.5",
     "crypto-js": "^4.0.0",
+    "firebase": "^8.0.0",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.5.1",
