--- a/finalproject-front/package.json
+++ b/finalproject-front/package.json
@@ -43,6 +43,7 @@
     "ngx-cookie-service": "^10.1.1",
     "php-js": "0.0.5",
     "rxjs": "~6.5.4",
+    "sweetalert": "^2.1.2",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
