--- a/finalproject-front/package.json
+++ b/finalproject-front/package.json
@@ -41,6 +41,7 @@
     "md5": "^2.3.0",
     "md5-typescript": "^1.0.5",
     "ngx-cookie-service": "^10.1.1",
+    "ngx-pagination": "^5.0.0",
     "php-js": "0.0.5",
     "rxjs": "~6.5.4",
     "sweetalert": "^2.1.2",
