Add, edit and delete fixed, Style added

--- a/finalproject-front/package.json
+++ b/finalproject-front/package.json
@@ -26,11 +26,12 @@
     "@fortawesome/angular-fontawesome": "^0.7.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@ng-bootstrap/ng-bootstrap": "^8.0.0",
     "@popperjs/core": "^2.4.4",
     "@types/js-cookie": "^2.2.6",
     "angular-font-awesome": "^3.1.2",
     "angular-md5": "^0.1.10",
-    "bootstrap": "^4.5.2",
+    "bootstrap": "^4.5.3",
     "cors": "^2.8.5",
     "crypto-js": "^4.0.0",
     "firebase": "^8.0.0",
