--- a/finalproject-front/angular.json
+++ b/finalproject-front/angular.json
@@ -92,10 +92,14 @@
                             "src/assets"
                         ],
                         "styles": [
+                            "node_modules/bootstrap/dist/css/bootstrap.min.css",
                             "src/styles.css"
                         ],
                         "scripts": [
-                            "node_modules/crypto-js/crypto-js.js"
+                            "node_modules/crypto-js/crypto-js.js",
+                            "node_modules/jquery/dist/jquery.min.js",
+                            "node_modules/@popperjs/core/dist/umd/popper.min.js",
+                            "node_modules/bootstrap/dist/js/bootstrap.min.js"
                         ]
                     }
                 },
