--- a/finalproject-front/package.json
+++ b/finalproject-front/package.json
@@ -48,6 +48,7 @@
     "php-js": "0.0.5",
     "rxjs": "~6.5.4",
     "sweetalert": "^2.1.2",
+    "sweetalert2": "^10.12.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
