--- a/finalproject-front/package.json
+++ b/finalproject-front/package.json
@@ -33,6 +33,7 @@
     "@types/js-cookie": "^2.2.6",
     "angular-font-awesome": "^3.1.2",
     "angular-md5": "^0.1.10",
+    "angular-ng-autocomplete": "^2.0.1",
     "bootstrap": "^4.5.3",
     "cors": "^2.8.5",
     "crypto-js": "^4.0.0",
