--- a/finalproject-front/package.json
+++ b/finalproject-front/package.json
@@ -1,78 +1,82 @@
 {
-  "name": "finalproject-front",
-  "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve -o --proxy-config proxy.conf.json",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "^9.0.7",
-    "@angular/cdk": "^9.2.4",
-    "@angular/common": "~9.0.7",
-    "@angular/compiler": "~9.0.7",
-    "@angular/core": "~9.0.7",
-    "@angular/fire": "^6.0.3",
-    "@angular/forms": "~9.0.7",
-    "@angular/material": "^9.2.4",
-    "@angular/platform-browser": "~9.0.7",
-    "@angular/platform-browser-dynamic": "~9.0.7",
-    "@angular/router": "~9.0.7",
-    "@angularclass/hmr": "^3.0.0",
-    "@ckeditor/ckeditor5-angular": "^2.0.1",
-    "@ckeditor/ckeditor5-build-classic": "^24.0.0",
-    "@fortawesome/angular-fontawesome": "^0.7.0",
-    "@fortawesome/fontawesome-svg-core": "^1.2.32",
-    "@fortawesome/free-solid-svg-icons": "^5.15.1",
-    "@ng-bootstrap/ng-bootstrap": "^8.0.0",
-    "@popperjs/core": "^2.4.4",
-    "@types/js-cookie": "^2.2.6",
-    "angular-font-awesome": "^3.1.2",
-    "angular-md5": "^0.1.10",
-    "angular-ng-autocomplete": "^2.0.1",
-    "bootstrap": "^4.5.3",
-    "cors": "^2.8.5",
-    "crypto-js": "^4.0.0",
-    "firebase": "^8.0.0",
-    "font-awesome": "^4.7.0",
-    "hammerjs": "^2.0.8",
-    "jquery": "^3.5.1",
-    "js-cookie": "^2.2.1",
-    "md5": "^2.3.0",
-    "md5-typescript": "^1.0.5",
-    "ngx-cookie-service": "^10.1.1",
-    "ngx-pagination": "^5.0.0",
-    "php-js": "0.0.5",
-    "rxjs": "~6.5.4",
-    "sweetalert": "^2.1.2",
-    "sweetalert2": "^10.12.4",
-    "tslib": "^1.10.0",
-    "zone.js": "~0.10.2"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "~0.900.7",
-    "@angular/cli": "~9.0.7",
-    "@angular/compiler-cli": "~9.0.7",
-    "@angular/language-service": "~9.0.7",
-    "@types/jasmine": "~3.5.0",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
-    "codelyzer": "^5.1.2",
-    "http-proxy-middleware": "^1.0.5",
-    "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.3.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~2.1.0",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.2",
-    "protractor": "~5.4.3",
-    "ts-node": "~8.3.0",
-    "tslint": "~5.18.0",
-    "typescript": "~3.7.5"
-  }
+    "name": "finalproject-front",
+    "version": "0.0.0",
+    "scripts": {
+        "ng": "ng",
+        "start": "ng serve -o --proxy-config proxy.conf.json",
+        "build": "ng build",
+        "test": "ng test",
+        "lint": "ng lint",
+        "e2e": "ng e2e",
+        "compodoc": "./node_modules/.bin/compodoc -p src/tsconfig.app.json -s --port=4400"
+    },
+    "private": true,
+    "dependencies": {
+        "@angular/animations": "^9.0.7",
+        "@angular/cdk": "^9.2.4",
+        "@angular/common": "~9.0.7",
+        "@angular/compiler": "~9.0.7",
+        "@angular/core": "~9.0.7",
+        "@angular/fire": "^6.0.3",
+        "@angular/forms": "~9.0.7",
+        "@angular/material": "^9.2.4",
+        "@angular/platform-browser": "~9.0.7",
+        "@angular/platform-browser-dynamic": "~9.0.7",
+        "@angular/router": "~9.0.7",
+        "@angularclass/hmr": "^3.0.0",
+        "@ckeditor/ckeditor5-angular": "^2.0.1",
+        "@ckeditor/ckeditor5-build-classic": "^24.0.0",
+        "@fortawesome/angular-fontawesome": "^0.7.0",
+        "@fortawesome/fontawesome-svg-core": "^1.2.32",
+        "@fortawesome/free-solid-svg-icons": "^5.15.1",
+        "@ng-bootstrap/ng-bootstrap": "^8.0.0",
+        "@popperjs/core": "^2.4.4",
+        "@types/js-cookie": "^2.2.6",
+        "angular-font-awesome": "^3.1.2",
+        "angular-md5": "^0.1.10",
+        "angular-ng-autocomplete": "^2.0.1",
+        "bootstrap": "^4.5.3",
+        "cors": "^2.8.5",
+        "crypto-js": "^4.0.0",
+        "firebase": "^8.0.0",
+        "font-awesome": "^4.7.0",
+        "hammerjs": "^2.0.8",
+        "jquery": "^3.5.1",
+        "js-cookie": "^2.2.1",
+        "md5": "^2.3.0",
+        "md5-typescript": "^1.0.5",
+        "ngx-cookie-service": "^10.1.1",
+        "ngx-pagination": "^5.0.0",
+        "php-js": "0.0.5",
+        "rxjs": "~6.5.4",
+        "sweetalert": "^2.1.2",
+        "sweetalert2": "^10.12.4",
+        "tslib": "^1.10.0",
+        "zone.js": "~0.10.2"
+    },
+    "devDependencies": {
+        "@angular-devkit/build-angular": "~0.900.7",
+        "@angular/cli": "~9.0.7",
+        "@angular/compiler-cli": "~9.0.7",
+        "@angular/language-service": "~9.0.7",
+        "@compodoc/compodoc": "^1.1.11",
+        "@types/jasmine": "~3.5.0",
+        "@types/jasminewd2": "~2.0.3",
+        "@types/node": "^12.11.1",
+        "angular-jsdoc": "^1.5.1",
+        "codelyzer": "^5.1.2",
+        "http-proxy-middleware": "^1.0.5",
+        "jasmine-core": "~3.5.0",
+        "jasmine-spec-reporter": "~4.2.1",
+        "jsdoc": "^3.6.6",
+        "karma": "~4.3.0",
+        "karma-chrome-launcher": "~3.1.0",
+        "karma-coverage-istanbul-reporter": "~2.1.0",
+        "karma-jasmine": "~2.0.1",
+        "karma-jasmine-html-reporter": "^1.4.2",
+        "protractor": "~5.4.3",
+        "ts-node": "~8.3.0",
+        "tslint": "~5.18.0",
+        "typescript": "~3.7.5"
+    }
 }
